atualiza configuração do Docker para usar 'socialmedia.db' como banco de dados e adiciona volume para persistência

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,7 @@ services:
       - "5000:5000"
     environment:
       - FLASK_ENV=development
-      - DATABASE_URI=sqlite:///mydb.db
+      - DATABASE_URI=sqlite:///socialmedia.db
       - SECRET_KEY=SUA_CHAVE_SECRETA
+    volumes:
+      - ./instance:/app/instance
